positioned main grid section(4 groups ,3 members)

--- a/Challenge 2/grid_challenge2.html
+++ b/Challenge 2/grid_challenge2.html
@@ -17,6 +17,7 @@
                 <a href="#"><li>Group1</li></a>
                 <a href="#"><li>Group2</li></a>
                 <a href="#"><li>Group3</li></a>
+                <a href="#"><li>Group4</li></a>
             </ul>
         </div> 
         <div class= "photo_Gal_Grid">
