Added all images to grids boxes

--- a/Challenge 2/grid_challenge2.html
+++ b/Challenge 2/grid_challenge2.html
@@ -9,30 +9,41 @@
 <body>
     <div class="container">
         <div class="lecture_grid">
-            <div class="lecture_box lecture_box1"><img src="imgs/imgur.jpg" alt="person1"></div>  
+            <div class="lecture_box lecture_box1"><img src="imgs/coach.jpg" alt="person1"></div>  
             <div class="lecture_box lecture_box2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur facere quod provident voluptatibus. Dolor itaque et illo illum nemo debitis nisi quae incidunt nihil veritatis quos asperiores ad id odit voluptates, molestias ipsa aspernatur! Ratione cupiditate dicta consequuntur. Consectetur dolor veniam repellat optio aut vitae.</div>               
         </div>
         <div class= "nav_Sec">
             <ul>
-                <a href="#"><li>Group1</li></a>
-                <a href="#"><li>Group2</li></a>
-                <a href="#"><li>Group3</li></a>
-                <a href="#"><li>Group4</li></a>
+                <a href="#group1"><li>Group1</li></a>
+                <a href="#group2"><li>Group2</li></a>
+                <a href="#group3"><li>Group3</li></a>
+                <a href="#group4"><li>Group4</li></a>
             </ul>
         </div> 
         <div class= "photo_Gal_Grid">
-            <div class="img1"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img2"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img3"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img4"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img5"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img6"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img7"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img8"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img9"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img10"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img11"><img src="imgs/imgur.jpg" alt="person1"></div>
-            <div class="img12"><img src="imgs/imgur.jpg" alt="person1"></div>
+            <div id="group1">
+                <div class="img1"><img src="imgs/friend1.jpg" alt="person1"></div>
+                <div class="img2"><img src="imgs/friend2.jpg" alt="person1"></div>
+                <div class="img3"><img src="imgs/friend3.jpg" alt="person1"></div>
+            </div>
+            <hr>
+            <div id="group2">
+                <div class="img4"><img src="imgs/friend4.jpg" alt="person1"></div>
+                <div class="img5"><img src="imgs/friend5.jpg" alt="person1"></div>
+                <div class="img6"><img src="imgs/friend6.jpg" alt="person1"></div>
+            </div>
+            <hr>
+            <div id="group3">
+                <div class="img7"><img src="imgs/friend7.jpg" alt="person1"></div>
+                <div class="img8"><img src="imgs/friend8.jpg" alt="person1"></div>
+                <div class="img9"><img src="imgs/friend9.jpg" alt="person1"></div>
+            </div>
+            <hr>
+            <div id="group4">
+                <div class="img10"><img src="imgs/friend10.jpg" alt="person1"></div>
+                <div class="img11"><img src="imgs/friend11.jpg" alt="person1"></div>
+                <div class="img12"><img src="imgs/MyPic.jpg" alt="person1"></div>
+            </div>
         </div>
     </div>
 </body>
