Completed grid challenge 2

--- a/Challenge 2/grid_challenge2.html
+++ b/Challenge 2/grid_challenge2.html
@@ -6,45 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
-<body>
+<body>    
+    <div class= "nav_Sec">
+        <ul>
+            <a href="#group1"><li>Group1</li></a>
+            <a href="#group2"><li>Group2</li></a>
+            <a href="#group3"><li>Group3</li></a>
+            <a href="#group4"><li>Group4</li></a>
+        </ul>
+    </div> 
+    <!-- <div class="nav_def"></div> -->
     <div class="container">
         <div class="lecture_grid">
-            <div class="lecture_box lecture_box1"><img src="imgs/coach.jpg" alt="person1"></div>  
-            <div class="lecture_box lecture_box2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur facere quod provident voluptatibus. Dolor itaque et illo illum nemo debitis nisi quae incidunt nihil veritatis quos asperiores ad id odit voluptates, molestias ipsa aspernatur! Ratione cupiditate dicta consequuntur. Consectetur dolor veniam repellat optio aut vitae.</div>               
+            <div class="lecture_box lecture_box1"><img src="imgs/coach.jpg" alt="coach" class="circle"></div>  
+            <div class="lecture_box lecture_box2">
+                <p>Garth is my Code Coach and he's extremely helpful and a friendly, I enjoy working with him. He's a good coach and can make your day with a fun ice breaker activity or by just telling the class a story or a little Joke. He treats us all as equals and each with respect.
+                </p>  
+                <p>When Garth reviews my projects and Challenges he'll always compliment me on areas I did good on and then tells me exactly where I can improve on. His assistance has been real helpful to my growth within the coding course. I have no complaint on his behaviorour or performance as I find it great. 
+                </p>
+             </div>                  
         </div>
-        <div class= "nav_Sec">
+
+        <div class= "photo_Gal_Grid">
+            
+                <div class="img1" id="group1"><img src="imgs/friend1.jpg" alt="person1"></div>
+                <div class="img2"><img src="imgs/friend2.jpg" alt="person1"></div>
+                <div class="img3"><img src="imgs/friend3.jpg" alt="person1"></div>
+
+                <div class="img4" id="group2"><img src="imgs/friend4.jpg" alt="person1"></div>
+                <div class="img5"><img src="imgs/friend5.jpg" alt="person1"></div>
+                <div class="img6"><img src="imgs/friend6.jpg" alt="person1"></div>
+
+
+                <div class="img7" id="group3"><img src="imgs/friend7.jpg" alt="person1"></div>
+                <div class="img8"><img src="imgs/friend8.jpg" alt="person1"></div>
+                <div class="img9"><img src="imgs/friend9.jpg" alt="person1"></div>
+
+
+                <div class="img10" id="group4"><img src="imgs/friend10.jpg" alt="person1"></div>
+                <div class="img11"><img src="imgs/friend11.jpg" alt="person1"></div>
+                <div class="img12"><img src="imgs/friend12.jpg" alt="person1"></div>
+
+
+        </div>
+    </div>
+    <div class= "nav_Sec">
             <ul>
                 <a href="#group1"><li>Group1</li></a>
                 <a href="#group2"><li>Group2</li></a>
                 <a href="#group3"><li>Group3</li></a>
                 <a href="#group4"><li>Group4</li></a>
             </ul>
-        </div> 
-        <div class= "photo_Gal_Grid">
-            <div id="group1">
-                <div class="img1"><img src="imgs/friend1.jpg" alt="person1"></div>
-                <div class="img2"><img src="imgs/friend2.jpg" alt="person1"></div>
-                <div class="img3"><img src="imgs/friend3.jpg" alt="person1"></div>
-            </div>
-            <hr>
-            <div id="group2">
-                <div class="img4"><img src="imgs/friend4.jpg" alt="person1"></div>
-                <div class="img5"><img src="imgs/friend5.jpg" alt="person1"></div>
-                <div class="img6"><img src="imgs/friend6.jpg" alt="person1"></div>
-            </div>
-            <hr>
-            <div id="group3">
-                <div class="img7"><img src="imgs/friend7.jpg" alt="person1"></div>
-                <div class="img8"><img src="imgs/friend8.jpg" alt="person1"></div>
-                <div class="img9"><img src="imgs/friend9.jpg" alt="person1"></div>
-            </div>
-            <hr>
-            <div id="group4">
-                <div class="img10"><img src="imgs/friend10.jpg" alt="person1"></div>
-                <div class="img11"><img src="imgs/friend11.jpg" alt="person1"></div>
-                <div class="img12"><img src="imgs/MyPic.jpg" alt="person1"></div>
-            </div>
-        </div>
-    </div>
+    </div> 
 </body>
 </html>
